スタック修正

--- a/cloudformation_control-node/2_EC2_ctrl.yml
+++ b/cloudformation_control-node/2_EC2_ctrl.yml
@@ -15,6 +15,7 @@ Parameters:
   
   ExistingEIP: #コントロールノード用の既存のEIPを入力する
     Description: The existing Elastic IP for ControlNode
+    Type: String
     Default: 54.64.20.148
     
 Resources:
