--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,18 +40,20 @@ jobs:
       - run:
           name: Add host key to known_hosts
           command: |
-           ssh-keyscan -H 18.180.2.113 >> ~/.ssh/known_hosts
+           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
            chmod 600 ~/.ssh/known_hosts
-
+           ssh-keyscan -H 18.180.2.113 >> ~/.ssh/known_hosts
+           
       - run:
           name: Execute Ansible Playbook
           command: ansible-playbook .ansible/playbook.yml -i .ansible/inventory
       - checkout
       - aws-cli/setup:
           region: AWS_DEFAULT_REGION
+
       - add_ssh_keys:
           fingerprints:
-            - "SHA256:4FHjhuVlFUKbXS8PtXn9iudtugfViiFpOzfjCsSYv4g"
+            - "	SHA256:aa2K3ZyCEuc18KGwfISWQXReT4gmgmFdEFd7y8RcQwk"
 
       - run:
           name: Run Ansible Playbook
