--- a/cloudformation/1_EC2_ALB_target.yml
+++ b/cloudformation/1_EC2_ALB_target.yml
@@ -85,6 +85,12 @@ Resources:
           Description: Alow SSH access from local
 
         - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+          Description: for circleci
+
+        - IpProtocol: tcp
           FromPort: 3000  
           ToPort: 3000 
           CidrIp: 0.0.0.0/0
