--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - run:
           name: Execute Ansible Playbook
           command: |
-            ansible-playbook -i ansible/inventory ansible/playbook.yml --private-key ~/.ssh/id_rsa
+            ansible-playbook -i ansible/inventory ansible/playbook.yml --private-key $SSH_PRIVATE_KEY_PATH
       - run:
           name: Setup AWS CLI
           command: |
@@ -71,7 +71,7 @@ jobs:
           name: "Execute serverspec"
           command: |
            cd serverspec
-           rake spec
+           TARGET HOST= 18.180.2.113 bundle exec spec
 
 workflows:
   version: 2
