--- a/ansible/roles/01_setup/tasks/main.yml
+++ b/ansible/roles/01_setup/tasks/main.yml
@@ -1,21 +1,4 @@
 ---
-- name: 'Check if the application directory exists'
-  stat:
-    path: "{{ app_dir }}"
-  register: app_dir_stat
-
-- name: 'Clone the repository'
-  git:
-    repo: 'https://github.com/yuta-ushijima/raisetech-live8-sample-app.git'
-    dest: "{{ app_dir }}"
-  when: not app_dir_stat.stat.exists
-
-- name: Clean YUM cache
-  command: yum clean all
-  become: yes
-  args:
-    warn: false
-
 - name: Update all packages on the system
   yum:
     name: "*"
@@ -40,5 +23,26 @@
       - glib2-devel
       - pkgconfig
       - gobject-introspection-devel
+      - glib2-static
+      - expat-devel
+      - ImageMagick-devel
+      - libjpeg-turbo-devel
+      - libpng-devel
+      - libwebp-devel
+      - libtiff-devel
+      - cairo-devel
+      - pango-devel
+      - tree 
     state: present
   become: yes
+
+- name: 'Check if the application directory exists'
+  stat:
+    path: "{{ app_dir }}"
+  register: app_dir_stat
+
+- name: 'Clone the repository'
+  git:
+    repo: 'https://github.com/yuta-ushijima/raisetech-live8-sample-app.git'
+    dest: "{{ app_dir }}"
+  when: not app_dir_stat.stat.exists
