--- a/ansible/roles/08_app_dev/tasks/main.yml
+++ b/ansible/roles/08_app_dev/tasks/main.yml
@@ -49,7 +49,13 @@
     state: present
     executable: pip3
 
-- name: Clone the libvips repository
+- name: Remove existing libvips directory
+  file:
+    path: /home/ec2-user/libvips
+    state: absent
+  ignore_errors: yes
+
+- name: Clone libvips repository
   git:
     repo: https://github.com/libvips/libvips.git
     dest: /home/ec2-user/libvips
@@ -63,16 +69,14 @@
   args:
     creates: /usr/local/lib/libvips.so
 
-- name: Set LD_LIBRARY_PATH
+- name: Set LD_LIBRARY_PATH for ec2-user
   lineinfile:
-    path: /etc/profile
-    line: 'export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH'
-    state: present
+    path: /home/ec2-user/.bash_profile
+    line: /usr/local/lib/
 
 - name: Reload profile
   shell: source /etc/profile
   ignore_errors: yes
-
 
 #実行準備
 - name: 'asset precompile'
