--- a/cloudformation/1_EC2_ALB_target.yml
+++ b/cloudformation/1_EC2_ALB_target.yml
@@ -88,7 +88,7 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
-          Description: for circleci
+          Description: for circleci   #circleci無料プランだとIPアドレス範囲が分からないため開放
 
         - IpProtocol: tcp
           FromPort: 3000  
