S3メソッド追加

--- a/cloudformation/1_EC2_ALB_target.yml
+++ b/cloudformation/1_EC2_ALB_target.yml
@@ -97,7 +97,7 @@ Resources:
           Description: Port 3000 permission for apps
 
       SecurityGroupEgress:
-        - IpProtocol: -1
+        - IpProtocol: "-1"
           CidrIp: 0.0.0.0/0
           
       Tags:
