--- a/cloudformation/2_RDS_S3.yml
+++ b/cloudformation/2_RDS_S3.yml
@@ -83,6 +83,8 @@ Resources:
               - "*"
             AllowedMethods: #GETメソッドのみ許可
               - GET
+              - PUT   # 追加
+              - POST  # 追加
             AllowedOrigins:
               - "*"
             MaxAge: 3000
