--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,9 @@ jobs:
       - checkout
       - ruby/install:
           version: 3.2.3
+      - run:
+          name: "Update RubyGems"
+          command: gem update --system
       - ruby/install-deps:
           app-dir: serverspec
       - run:
