--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -11,7 +11,6 @@
     region: "{{ lookup('env','AWS_DEFAULT_REGION') }}"
     ssh_private_key_path: "{{ lookup('env','SSH_PRIVATE_KEY' ) }}"
     
-
   roles:
     - { role: 01_setup }
     - { role: 02_ruby }
@@ -20,5 +19,6 @@
     - { role: 05_yarn }
     - { role: 06_mysql }
     - { role: 07_nginx }
-    - { role: 08_app_dev }
+    - { role: 08_puma }
+    - { role: 09_app_dev }
   
