--- a/ansible/roles/07_nginx/tasks/main.yml
+++ b/ansible/roles/07_nginx/tasks/main.yml
@@ -1,27 +1,20 @@
 ---
-- name: 'Install Nginx'
+- name: Install Nginx
   yum:
     name: nginx
     state: present
   become: yes
 
-- name: 'Create nginx.conf'
+- name: Create nginx.conf from template
   template:
     src: nginx.conf.j2
-    dest: "/etc/nginx/nginx.conf" 
+    dest: "/etc/nginx/nginx.conf"
+  notify: Reload Nginx service
   become: yes
 
-- name: 'Start Nginx service'
+- name: Enable and start Nginx service
   service:
     name: nginx
     state: started
     enabled: yes
-  register: nginx_started
-  become: yes
-
-- name: 'Reload Nginx service'
-  service:
-    name: nginx
-    state: reloaded
-  when: nginx_started.changed
   become: yes
