--- a/ansible/roles/07_nginx/tasks/main.yml
+++ b/ansible/roles/07_nginx/tasks/main.yml
@@ -1,23 +1,20 @@
 ---
-- name: Install EPEL repository
+- name: Install NGINX from RPM
   yum:
-    name: epel-release
+    name: "https://nginx.org/packages/centos/7/x86_64/RPMS/nginx-1.24.0-1.el7.ngx.x86_64.rpm"
     state: present
   become: yes
-
-- name: Install Nginx
-  yum:
-    name: nginx
-    state: present
 
 - name: Create nginx.conf from template
   template:
     src: nginx.conf.j2
     dest: "/etc/nginx/nginx.conf"
   notify: Reload Nginx service
+  become: yes
 
-- name: Enable and start Nginx service
+- name: Enable and start NGINX service
   service:
     name: nginx
     state: started
     enabled: yes
+  become: yes
