--- a/ansible/roles/03_rails/tasks/main.yml
+++ b/ansible/roles/03_rails/tasks/main.yml
@@ -7,6 +7,6 @@
 
 - name: Install Rails
   shell: bash -lc "gem install rails -v 7.1.3.2 --no-document"
-  when: rails_installed.stdout != "true"
-  ignore_errors: yes
+  when: rails_installed is failed
+
 
