--- a/ansible/roles/05_yarn/tasks/main.yml
+++ b/ansible/roles/05_yarn/tasks/main.yml
@@ -17,3 +17,10 @@
 
 - name: Ensure .bashrc is sourced
   shell: source ~/.bashrc
+
+- name: Run bundle install
+  shell: |
+    bash -lc "bundle install"
+  args: 
+    chdir: "{{ app_dir }}"
+  ignore_errors: ye
