--- a/ansible/roles/06_mysql/tasks/main.yml
+++ b/ansible/roles/06_mysql/tasks/main.yml
@@ -35,3 +35,10 @@
     owner: root
     group: root
     mode: '0644'
+
+- name: Run bundle install
+  shell: |
+    bash -lc "bundle install"
+  args: 
+    chdir: "{{ app_dir }}"
+  ignore_errors: ye
