--- a/ansible/roles/08_puma/tasks/main.yml
+++ b/ansible/roles/08_puma/tasks/main.yml
@@ -12,3 +12,9 @@
     state: started
     enabled: yes
   become: yes
+
+- name: set puma.rb
+  template:
+    src: puma.rb.j2
+    dest: /home/ec2-user/raisetech-live8-sample-app/config/puma.rb
+  notify: Reload systemd
