--- a/serverspec/Gemfile
+++ b/serverspec/Gemfile
@@ -3,3 +3,5 @@ source "https://rubygems.org"
 gem 'serverspec'
 gem 'rake'
 gem 'highline'
+gem 'ed25519', '>= 1.2', '< 2.0'
+gem 'bcrypt_pbkdf', '>= 1.0', '< 2.0'
