mesonインストール変更

--- a/ansible/roles/07_nginx/tasks/main.yml
+++ b/ansible/roles/07_nginx/tasks/main.yml
@@ -5,6 +5,12 @@
     state: present
   become: yes
 
+- name: Create directory for socket
+  file:
+    path: /home/ec2-user/raisetech-live8-sample-app/tmp/sockets
+    state: directory
+    mode: '0755'
+
 - name: Create nginx.conf from template
   template:
     src: nginx.conf.j2
