--- a/ansible/roles/09_app_dev/tasks/main.yml
+++ b/ansible/roles/09_app_dev/tasks/main.yml
@@ -3,13 +3,13 @@
 - name: set development.rb
   template:
     src: development.rb.j2
-    dest: /home/ec2-user/raisetech-live8-sample-app/config/environments/development.rb
+    dest: "{{ app_dir }}"/config/environments/development.rb
 
 #S3の設定
 - name: set S3 storage.yml
   template:
     src: storage.yml.j2
-    dest: /home/ec2-user/raisetech-live8-sample-app/config/storage.yml
+    dest: "{{ app_dir }}"/config/storage.yml
   ignore_errors: yes
 
 #libvipsのインストール
@@ -91,17 +91,15 @@
   ignore_errors: yes
 
 - name: Create database if it does not exist
-  ansible.builtin.command: bundle exec rake db:create
+  ansible.builtin.shell: bash -lc "bundle exec rake db:create"
   args:
     chdir: "{{ app_dir }}"
-  become: yes
   ignore_errors: yes
 
 - name: Run database migration
-  ansible.builtin.command: bundle exec rake db:migrate
+  ansible.builtin.shell: bash -lc "bundle exec rake db:migrate"
   args:
     chdir: "{{ app_dir }}"
-  become: yes
   ignore_errors: yes
 
 - name: 'bin/setup'
