--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: targetnode
+  gather_facts: false
   vars: 
     app_dir: /home/ec2-user/raisetech-live8-sample-app
     db_host: "{{ lookup('env', 'RDS_ENDPOINT') }}" 
