--- a/ansible/roles/09_app_dev/tasks/main.yml
+++ b/ansible/roles/09_app_dev/tasks/main.yml
@@ -3,13 +3,13 @@
 - name: set development.rb
   template:
     src: development.rb.j2
-    dest: "{{ app_dir }}"/config/environments/development.rb
+    dest: "{{ app_dir }}/config/environments/development.rb"
 
 #S3の設定
 - name: set S3 storage.yml
   template:
     src: storage.yml.j2
-    dest: "{{ app_dir }}"/config/storage.yml
+    dest: "{{ app_dir }}/config/storage.yml"
   ignore_errors: yes
 
 #libvipsのインストール
@@ -28,7 +28,7 @@
   become: yes
 
 - name: Install Meson and Ninja using pip
-  shell: bash -lc "pip3 install meson ninja"
+  command: /usr/bin/pip3 install meson ninja
   ignore_errors: yes
 
 - name: Add Meson to PATH in .bashrc
@@ -36,12 +36,6 @@
     path: /home/ec2-user/.bashrc
     line: 'export PATH="$HOME/.local/bin:$PATH"'
     state: present
-
-- name: Source .bashrc to update PATH
-  shell: source /home/ec2-user/.bashrc
-  args:
-    executable: /bin/bash
-  ignore_errors: yes
 
 - name: Clone libvips repository
   git:
@@ -61,16 +55,19 @@
     chdir: /home/ec2-user/libvips/build
   ignore_errors: yes
 
-- name: meson test
+- name: Run meson test
   shell: bash -lc "meson test"
   args:
     chdir: /home/ec2-user/libvips/build
   ignore_errors: yes
 
-- name: install libvips
-  shell: bash -lc "meson install"
+- name: Install libvips
+  command: meson install
   args:
     chdir: /home/ec2-user/libvips/build
+  environment:
+    PATH: "/home/ec2-user/.local/bin:/usr/local/bin:/usr/bin:/bin:$PATH"
+    PYTHONPATH: "/home/ec2-user/.local/lib/python3.7/site-packages"  # ここを設定
   become: yes 
   ignore_errors: yes
 
