--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,12 +35,10 @@ jobs:
       - image: cimg/python:3.8
     steps:
       - checkout
-
       - run:
           name: Install Ansible
           command: |
             pip install ansible
-
       - add_ssh_keys:
           fingerprints:
             - "SHA256:aa2K3ZyCEuc18KGwfISWQXReT4gmgmFdEFd7y8RcQwk"  # CircleCIに登録したもの
@@ -65,7 +63,6 @@ jobs:
           name: Add host key to known_hosts
           command: |
             ssh-keyscan -H 18.180.2.113 >> ~/.ssh/known_hosts 
-
       - ruby/install:
           version: 3.2.3
       - run:
@@ -73,12 +70,11 @@ jobs:
           command: gem update --system
       - ruby/install-deps:
           app-dir: serverspec
-
       - run:
           name: "Execute serverspec"
           command: |
             cd serverspec
-            TARGET_HOST=18.180.2.113 bundle exec rspec --private-key ~.ssh/id_rsa
+            TARGET_HOST=18.180.2.113 bundle exec rspec
 
 workflows:
   version: 2
